Bugfix: Mysql source uses hikari connection pool, named threads, improved mysql.ddl, fixed bean naming bug (can now run kafka & mysql at the same time). Removing transaction from mysql source (not needed anymore)